# hledger-textual

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  LICENSE.md  README.md  coverage.json  pyproject.toml
.github/workflows/: publish.yml
examples/: budget.journal  demo-budget.journal  demo-config.toml  demo.journal
homebrew/: hledger-textual.rb
src/hledger_textual/: __main__.py  app.py  budget.py  config.py  formatter.py  git.py  hledger.py  journal.py  models.py  prices.py
src/hledger_textual/ai/: context_builder.py  errors.py  ollama_client.py
src/hledger_textual/screens/: account_transactions.py  ai_chat.py  budget_delete_confirm.py  budget_form.py  delete_confirm.py  sync_confirm.py  transaction_form.py
src/hledger_textual/styles/: app.tcss
src/hledger_textual/widgets/: accounts_pane.py  amount_input.py  budget_pane.py  date_input.py  info_pane.py  posting_row.py  report_chart.py  reports_pane.py  summary_pane.py  transactions_pane.py  transactions_table.py
src/hledger_tui/: __init__.py  __main__.py  app.py  budget.py  config.py  formatter.py  hledger.py  journal.py  models.py  prices.py
tests/: conftest.py  test_accounts_pane.py  test_ai_chat.py  test_amount_input.py  test_app.py  test_autocomplete_input.py  test_budget.py  test_budget_form.py  test_budget_pane.py  test_config.py  test_context_builder.py  test_date_input.py  test_delete_confirm.py  test_distribute_column_widths.py  test_formatter.py  test_git.py  test_hledger.py  test_info_pane.py  test_journal.py  test_models.py  test_ollama_client.py  test_posting_row.py  test_prices.py  test_report_chart.py  test_reports_pane.py  test_summary_pane.py  test_theme_picker.py  test_transaction_form.py  test_transactions_table.py
tests/fixtures/: sample.journal  sample_budget.journal
(+19 files in other folders)
